--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<h3 class="accent" >Profile</h3>
 				<h2>About Me</h2>
 				 <p>
-				    My name is Viraj Rai , I am Jr. Software Developer, I value simple content structure, clean design patterns, and thoughtful interactions.
+				    My name is Viraj Rai , I am a Jr. Software Developer, I value simple content structure, clean design patterns, and thoughtful interactions.
 				 </p>
 			</div>
 		</div>
