--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<img src="images/resized-image-Promo.jpeg" class="img-responsive img-circle"></div>
 				 
 				<h1 class="white">Hi, I am Viru</h1>
-				<h1 class="white">Designer, Front-end Developer</h1>
+				<h1 class="white">Designer, Software Developer</h1>
 			</div>
 		</div>
 	</div>
