--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#24292d"/>
 	<meta name="description" content="Portfolio of a Jr. Software Developer with experience at Paypoint, specializing in mobile applications, user experience refinement, and feature implementation for financial apps.">
-	<meta name="keywords" content="software developer, mobile applications, user experience, financial apps, Jr. Software Developer, Paypoint">
+	<meta name="keywords" content="software developer, mobile applications, user experience, financial apps, Jr. Software Developer, Paypoint, viru, _viru_7, viruop, Viraj Rai">
 	<meta name="author" content="Viraj Rai">
 	<meta property="og:title" content="Viraj Rai - Jr. Software Developer">
 	<meta property="og:description" content="Portfolio of a Jr. Software Developer with experience at Paypoint, specializing in mobile applications, user experience refinement, and feature implementation for financial apps.">
@@ -27,7 +27,7 @@
 
 	
 
- 
+ <body>
 <!-- header section -->
 <header>
 	<div class="container">
