deploy: reduced css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="cool"></div>
-				<img src="images/viru.webp" alt="Author's profile image" class="img-responsive img-circle"></div>
+				<img src="images/viru.webp" width="auto" height="auto" alt="Author's profile image" class="img-responsive img-circle"></div>
 				 
 				<h1 class="white">Hi, I am Viraj</h1>
 				<h1 class="white">Software Developer</h1>
@@ -68,19 +68,19 @@
 				<strong>Hybrid App Development</strong>
 				<span class="pull-right">95%</span>
 					<div class="progress">
-						<div ariai-label="Hybrid app development" class="progress-bar progress-bar-primary" role="progressbar" 
+						<div aria-label="Hybrid app development" class="progress-bar progress-bar-primary" role="progressbar" 
                         aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
 					</div>
 				<strong>Fullstack Development</strong>
 				<span class="pull-right">85%</span>
 					<div class="progress">
-						<div ariai-label="Fullstack Development" class="progress-bar progress-bar-primary" role="progressbar" 
+						<div aria-label="Fullstack Development" class="progress-bar progress-bar-primary" role="progressbar" 
                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
 					</div>
 				<strong>Automation & Scripting</strong>
 				<span class="pull-right">85%</span>
 					<div class="progress">
-						<div ariai-label="Automation & Scripting" class="progress-bar progress-bar-primary" role="progressbar" 
+						<div aria-label="Automation & Scripting" class="progress-bar progress-bar-primary" role="progressbar" 
                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
 					</div>
 			
