--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<div class="timeline-dot" > </div>
 			<div class="timeline-date">2019 May</div>
 			<div class="timeline-content" data-aos="fade-up-right">
-				<h3>I Entered in CS Feild</h3>
+				<h3>My first project</h3>
 				<p>At first I Learned the basics of computer, Then i got to known about HTML CSS, and how we can create beautiful webpages   </p>
 			</div>
 		</div>
