deploy: timeline update

--- a/index.html
+++ b/index.html
@@ -171,24 +171,24 @@
 			<div class="timeline-dot"></div>
 			<div class="timeline-date">2020 Jan</div>
 			<div class="timeline-content" data-aos="fade-up-right">
-				<h3>Made My Frist Project</h3>
-				<p>My first project was a simple fun webpage of one of my friend, it is very basic webpage you can check it out on my github   </p>
+				<h3>BHAGVAD GITA WEBAPP</h3>
+				<p>This web application offers access to all the chapters and verses found in the Bhagavad Gita. It provides the original Sanskrit 'shlokas' along with translations in Hindi and English.  </p>
 			</div>
 		</div>
 		<div class="timeline-item">
 			<div class="timeline-dot"></div>
 			<div class="timeline-date">2020 June</div>
 			<div class="timeline-content" data-aos="fade-up-left">
-				<h3>Made My Second Project</h3>
-				<p>After my first project I decided to make webpage for my relative. It is portfolio bussiness Website you can check it out on my github </p>
+				<h3>Astrology API</h3>
+				<p>This API allows you to retrieve astrology information based on the provided query parameters.</p>
 			</div>
 		</div>
 		<div class="timeline-item">
 			<div class="timeline-dot"></div>
 			<div class="timeline-date">2021 March</div>
 			<div class="timeline-content" data-aos="fade-up-right">
-				<h3>I made this web page</h3> 
-				<p>This is just a mini portfolio webpage and timeline of my work. Beside this I am Learning Javascriot and Reactjs</p>
+				<h3>TRANSLATION AUTOMATION</h3> 
+				<p>The Translation Automation Script is a time-saving tool that translates English content from a CSV file into 4 different languages. It generates a translated CSV file. Additionally, it creates an i18n JSON file, streamlining content integration for software and websites. It is built using express </p>
 			</div>
 		</div>
 	
