--- a/index.html
+++ b/index.html
@@ -153,42 +153,43 @@
 	<div class="timeline-items">
 		<div class="timeline-item">
 			<div class="timeline-dot" > </div>
-			<div class="timeline-date">2019 May</div>
+			<div class="timeline-date">2022 May</div>
 			<div class="timeline-content" data-aos="fade-up-right">
-				<h3>My first project</h3>
-				<p>At first I Learned the basics of computer, Then i got to known about HTML CSS, and how we can create beautiful webpages   </p>
+				<h3>Horoscope App</h3>
+				<p>Elevate your daily routine with a personalized horoscope experience! Access tailored cosmic insights meticulously designed with React, ensuring a seamless and interactive platform.
 			</div>
 		</div>
+		
 		<div class="timeline-item">
 			<div class="timeline-dot"></div>
-			<div class="timeline-date">2019 August</div>
+			<div class="timeline-date">2022 Sep</div>
 			<div class="timeline-content" data-aos="fade-up-left">
-				<h3>Learned HTML & CSS</h3>
-				<p>I learned the basics and useful concepts of CSS like flexbox, grid and media queries for Responsive of webpage</p>
-			</div>
-		</div>
-		<div class="timeline-item">
-			<div class="timeline-dot"></div>
-			<div class="timeline-date">2020 Jan</div>
-			<div class="timeline-content" data-aos="fade-up-right">
-				<h3>BHAGVAD GITA WEBAPP</h3>
+				<h3>Bhagavad Gita Webapp</h3>
 				<p>This web application offers access to all the chapters and verses found in the Bhagavad Gita. It provides the original Sanskrit 'shlokas' along with translations in Hindi and English.  </p>
 			</div>
 		</div>
 		<div class="timeline-item">
 			<div class="timeline-dot"></div>
-			<div class="timeline-date">2020 June</div>
-			<div class="timeline-content" data-aos="fade-up-left">
+			<div class="timeline-date">2023 July</div>
+			<div class="timeline-content" data-aos="fade-up-right">
 				<h3>Astrology API</h3>
 				<p>This API allows you to retrieve astrology information based on the provided query parameters.</p>
 			</div>
 		</div>
 		<div class="timeline-item">
 			<div class="timeline-dot"></div>
-			<div class="timeline-date">2021 March</div>
-			<div class="timeline-content" data-aos="fade-up-right">
-				<h3>TRANSLATION AUTOMATION</h3> 
+			<div class="timeline-date">2023 August</div>
+			<div class="timeline-content" data-aos="fade-up-left">
+				<h3>Translation Automation</h3> 
 				<p>The Translation Automation Script is a time-saving tool that translates English content from a CSV file into 4 different languages. It generates a translated CSV file. Additionally, it creates an i18n JSON file, streamlining content integration for software and websites. It is built using express </p>
+			</div>
+		</div>
+		<div class="timeline-item">
+			<div class="timeline-dot"></div>
+			<div class="timeline-date">2023 Sep</div>
+			<div class="timeline-content" data-aos="fade-up-right">
+				<h3>Digi Khata</h3>
+				<p>Contributed to the development of the DigiKhata a versatile UPI app, enhancing its functionalities and user experience through React Native expertise.</p>
 			</div>
 		</div>
 	
