--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#24292d"/>
-	<meta name="description" content="Portfolio of a Jr. Software Developer with experience at Paypoint, specializing in mobile applications, user experience refinement, and feature implementation for financial apps.">
-	<meta name="keywords" content="software developer, mobile applications, user experience, financial apps, Jr. Software Developer, Paypoint, viru, _viru_7, viruop, Viraj Rai">
+	<meta name="description" content="Portfolio of a Software Developer with experience at Paypoint, specializing in mobile applications, user experience refinement, and feature implementation for financial apps.">
+	<meta name="keywords" content="software developer, mobile applications, user experience, financial apps, Software Developer, Paypoint, viru, _viru_7, viruop, Viraj Rai">
 	<meta name="author" content="Viraj Rai">
-	<meta property="og:title" content="Viraj Rai - Jr. Software Developer">
-	<meta property="og:description" content="Portfolio of a Jr. Software Developer with experience at Paypoint, specializing in mobile applications, user experience refinement, and feature implementation for financial apps.">
+	<meta property="og:title" content="Viraj Rai -  Software Developer">
+	<meta property="og:description" content="Portfolio of a Software Developer with experience at Paypoint, specializing in mobile applications, user experience refinement, and feature implementation for financial apps.">
 	<meta property="og:image" content="images/viru.webp">
 	<meta property="og:url" content="https://viru.dev">
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -51,7 +51,7 @@
 			<div class="about" data-aos="fade-up-right">
 				
 				<h2 >Experience</h2>					 
-						<h4 class="education-title ">Jr. Software Developer</h4>
+						<h4 class="education-title ">Software Developer</h4>
 							<div class="education-school">
 								<h5>Paypoint (09/2022 - Current)</h5> 
 								
