deploy: changed variable type

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
 	AOS.init({
 		disable: "mobile",
 	});
-	let currentYear = new Date().getFullYear(); 
+	const currentYear = new Date().getFullYear(); 
 
-    let yearElement = document.getElementById("currentYear");
+    const yearElement = document.getElementById("currentYear");
 
     yearElement.textContent = currentYear;
   </script>
